<resources>
    <string name="app_name">IronAthlete</string>
    <string name="user_email">Correo electronico</string>
    <string name="Icon_description">Icono</string>
    <string name="password2">Contrasena</string>
    <string name="Create_Account">Crear Cuenta</string>
    <string name="Sign_in">Iniciar Sesion</string>
    <string name="Repassword">Repetir contraseña</string>
    <string name="sign_out">Cerrar Sesion</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_muscle">Routine</string>
    <string name="title_diets">Diet</string>
    <string name="title_community">People</string>
    <string name="cook">Let´s cook it</string>
    <string name="complete_diet">PLAN NUTRICIONAL</string>
    <string name="title_dish">NOMBRE COMIDA</string>
    <string name="info_user_indicator">Informacion personal</string>
    <string name="estadistic_user_indicator">Estadisticas</string>
    <string name="user_name_title">NOMBRE DE USUARIO</string>
    <string name="weight">Peso (kg)</string>
    <string name="height">Estatura (cm)</string>
    <string name="hint_user_name">Nombre de usuario</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="gender_selector">Sexo</string>
    <string name="infor_user">INFORMACION DEL USUARIO</string>
    <string name="time_work_out">HORA DEL ENTRENAMIENTO</string>
    <string name="formato_hora">hh-mm-ss</string>
    <string name="gym_available">¿Vas al gimnasio? </string>
    <string name="afirmative">Si</string>
    <string name="negative">No</string>
    <string name="goal">¿Cual es tu objetivo?</string>
    <string name="bulk">Aumentar masa muscular</string>
    <string name="shredded">Bajar de peso</string>
    <string name="save">Guardar</string>
    <string name="age">Edad</string>
    <string name="physicalActiviry">Actividad fisica habitual</string>
    <string name="easyExercise">Poco o ningún ejercicio</string>
    <string name="boyExercise">Ejercicio ligero (1-3 días a  la semana)</string>
    <string name="adolecentExercise">Ejercicio moderado (3-5  días a la semana)</string>
    <string name="adultExercise">Ejercicio fuerte (6-7 días  a la semana)</string>
    <string name="legendExercise">Ejercicio muy fuerte (dos veces al  día)</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exercise_statistics_fragment">Exercise Statistics</string>

    <string name="preparation">Preparacion</string>
    <string name="ingredients">Ingredientes</string>
    <string name="objetive_label">Objetivo</string>
    <string name="add_forum">+ Agregar</string>
    <string name="add_comment">Escribe lo que piensas</string>
    <string name="comment">Comentar</string>
    <string name="cancel">Cancelar</string>
    <string name="openDialog">Comenta</string>
    <string name="ok">Aceptar</string>
    <string name="no">Cancelar</string>
    <string name="date">Fecha de publicacion</string>
    <string name="send">Enviar</string>
    <string name="answer">Responde!!</string>
    <string name="close">Cerrar</string>
    <string name="muscle">Rutina</string>
    <string name="food">Dieta</string>
    <string name="social">Comunidad</string>
    <string name="detail">Detalle</string>
    <string name="Ejercicio">Ejercicio</string>
</resources>