<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbarTrackVertical="@drawable/ic_baseline_cached_24">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_account_box" />

        <TextView
            android:id="@+id/user_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:text="@string/hint_user_name"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <TextView
            android:id="@+id/edad_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/age"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <TextView
            android:id="@+id/display_age_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="@+id/edad_label_text_view"
            app:layout_constraintStart_toEndOf="@+id/edad_label_text_view"
            app:layout_constraintTop_toTopOf="@+id/edad_label_text_view" />

        <TextView
            android:id="@+id/objetive_label_display_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/objetive_label"
            app:layout_constraintBottom_toBottomOf="@+id/display_age_text_view"
            app:layout_constraintStart_toEndOf="@+id/display_age_text_view"
            app:layout_constraintTop_toTopOf="@+id/display_age_text_view" />

        <TextView
            android:id="@+id/display_objetive_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="@+id/objetive_label_display_text"
            app:layout_constraintStart_toEndOf="@+id/objetive_label_display_text"
            app:layout_constraintTop_toTopOf="@+id/objetive_label_display_text" />

        <TextView
            android:id="@+id/display_content_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/likes_Image_view"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/display_content_text_view"
            app:srcCompat="@drawable/ic_baseline_thumb_up_24" />

        <TextView
            android:id="@+id/dislay_number_likes_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="@+id/likes_Image_view"
            app:layout_constraintStart_toEndOf="@+id/likes_Image_view"
            app:layout_constraintTop_toTopOf="@+id/likes_Image_view" />

        <ImageView
            android:id="@+id/comments_image_view"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/dislay_number_likes_text_view"
            app:layout_constraintTop_toBottomOf="@+id/display_content_text_view"
            app:srcCompat="@drawable/comments" />

        <TextView
            android:id="@+id/number_comments_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="@+id/comments_image_view"
            app:layout_constraintStart_toEndOf="@+id/comments_image_view"
            app:layout_constraintTop_toTopOf="@+id/comments_image_view" />

        <TextView
            android:id="@+id/content_comments_test_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comments_image_view" />

        <TextView
            android:id="@+id/date_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="14dp"
            android:text="@string/date"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView3" />

        <TextView
            android:id="@+id/display_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="@+id/date_label_text_view"
            app:layout_constraintStart_toEndOf="@+id/date_label_text_view"
            app:layout_constraintTop_toTopOf="@+id/date_label_text_view" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_new_answer_text_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/content_comments_test_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/write_new_answer_text_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_new_comment_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="96dp"
            android:text="@string/send"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_new_answer_text_input_layout"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/close_answer_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="12dp"
            android:text="@string/close"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_new_answer_text_input_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>